# mneme-universal-context-service

./: .gitignore  API_MCP_CONTRACT_V0.md  API_MCP_CONTRACT_V0_REVIEW_RESPONSE.md  HERMES_MNEME_COMPARISON.md  IMPLEMENTATION_PATHS_AND_MVP.md  LICENSE  MILESTONE_2_MCP_SERVER_AND_ADAPTER_PLAN.md  MILESTONE_3_CODEX_INGESTION_PLAN.md  MILESTONE_4_CODEX_MEMORY_DOGFOOD_AND_PROVIDER_CONFIG_PLAN.md  MILESTONE_5B_PARITY_HARDENING_PLAN.md  MILESTONE_5_HERMES_MNEME_PARITY_RECOVERY_PLAN.md  MILESTONE_6_FULL_HERMES_MNEME_PARITY_COMPLETION_PLAN.md  MNEME_HOST_ADAPTER_CONTRACT_V0.md  MNEME_UNIVERSAL_CONTEXT_SERVICE_CONCEPT.md  NEXT_SESSION_PROMPT_PHASE_14_AUTONOMOUS.md  NOTICE  README.md  findings.md  mneme.example.toml  mneme_universal_context_service_architecture.html  progress.md  pyproject.toml  task_plan.md
.planning/: findings.md  progress.md  roadmap.md  spec.md
docs/: BENCHMARKS.md  INSTALLATION.md  MNEME_CORE_ADAPTER_BOUNDARY_REFACTOR_SPEC.md  MNEME_CORE_ADAPTER_BOUNDARY_REVIEWER_PACKET.md  MNEME_DEVELOPMENT_SPEC.md  MNEME_HOST_ADAPTER_CONTRACT_V0.md  MNEME_STANDALONE_SPEC.md  MNEME_V0_COMPLIANCE_IMPLEMENTATION_PLAN.md  MNEME_V0_COMPLIANCE_MATRIX.md  MNEME_V0_REVIEWER_PACKET.md  PROVIDER_CONFIGURATION.md  PUBLICATION_CHECKLIST.md  RLM_ORCHESTRATOR_DEVELOPMENT_SPEC.md  TESTING_AND_CI.md  VECTOR_ACCELERATION.md
mneme_service/: __init__.py  app.py  benchmarks.py  classifier.py  cli.py  codex_hooks.py  codex_ingest.py  codex_setup.py  config.py  embeddings.py  enrichment.py  errors.py  mcp_server.py  reranker.py  rest_client.py  schemas.py  security.py  segments.py  state.py  (+5 more)
(+200 files in other folders)
